--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </ul>
 
       <div class="logo">
-        <img src="IMAGES/logo1.png" alt="Aladdin Shawarmas" />
+        <img src="images/logo1.png" alt="Aladdin Shawarmas" />
       </div>
 
       <ul class="nav-links right">
@@ -511,3 +511,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
